--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
 <title>AI脳トレ</title>
 <script>
 
-const testMode = false; //テスト時にローディングを高速化できる
+const testMode = true; //テスト時にローディングを高速化できる
 const FINAL_STAGE = 5;
 
 // --- 問題データ ---
@@ -26,7 +26,7 @@ const quizData=[
   {"stage":"2","mode":"","quiztype":"注意力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"じゃんけんで負けて！","image":"images/tyoki.png","music":"","image2":"","image2time":"","options":[{"text":"images/goo.png"},{"text":"images/tyoki.png"},{"text":"images/paa.png"},{"text":""}],"correct":"images/paa.png","answerPict":"","rand":false,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"2","mode":"","quiztype":"注意力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"文字数が多いのは？","image":"images/moji2.png","music":"","image2":"","image2time":"","options":[{"text":"S"},{"text":"A"},{"text":""},{"text":""}],"correct":"S","answerPict":"","rand":true,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"2","mode":"kioku","quiztype":"記憶力","beforeTxt":"画像を覚えて！","beforeImg":"images/animals.png","beforeMusic":"","beforeTime":"4000","question":"野鳥の数は？","image":"","music":"","image2":"","image2time":"","options":[{"text":"1"},{"text":"2"},{"text":""},{"text":""}],"correct":"2","answerPict":"","rand":false,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
-  {"stage":"2","mode":"","quiztype":"形状判断力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"一番若いのは？","image":"","music":"","image2":"","image2time":"","options":[{"text":"images/egg.png"},{"text":"images/otama.png"},{"text":"images/otama2.png"},{"text":"images/kaeru.png"}],"correct":"images/egg.png","answerPict":"","rand":false,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
+  {"stage":"2","mode":"","quiztype":"形状判断力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"一番若いのは？","image":"","music":"","image2":"","image2time":"","options":[{"text":"images/egg.png"},{"text":"images/otama.png"},{"text":"images/otama2.png"},{"text":"images/kaeru.png"}],"correct":"images/egg.png","answerPict":"","rand":true,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"2","mode":"","quiztype":"音感","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"どの音階？","image":"images/kiite.png","music":"re","image2":"","image2time":"","options":[{"text":"ド"},{"text":"レ"},{"text":"ミ"},{"text":"ファ"}],"correct":"レ","answerPict":"","rand":false,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"2","mode":"","quiztype":"パターン認識力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"？にあてはまるのは","image":"images/nums.png","music":"","image2":"","image2time":"","options":[{"text":"1"},{"text":"2"},{"text":"3"},{"text":"4"}],"correct":"2","answerPict":"","rand":false,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"2","mode":"","quiztype":"形状判断力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"あてはまるのは？","image":"images/tako.png","music":"","image2":"","image2time":"","options":[{"text":"images/tako_p1.png"},{"text":"images/tako_p2.png"},{"text":""},{"text":""}],"correct":"images/tako_p2.png","answerPict":"","rand":true,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
@@ -47,11 +47,11 @@ const quizData=[
   {"stage":"4","mode":"renda","quiztype":"運動神経伝達力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"連打して！","image":"images/karate_left.png","music":"","image2":"images/karate_right.png","image2time":"","options":[{"text":"連打!"},{"text":""},{"text":""},{"text":""}],"correct":"","answerPict":"","rand":false,"answertime":5000,"answerstart":5000,"perfect":50,"excellent":40,"great":30,"good":20,"safe":10},
   {"stage":"4","mode":"","quiztype":"空間認識力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"電車の進行方向は？","image":"images/ookubo.png","music":"","image2":"","image2time":"","options":[{"text":"手前"},{"text":"奥"},{"text":""},{"text":""}],"correct":"手前","answerPict":"","rand":false,"answertime":10000,"answerstart":10000,"perfect":9500,"excellent":7500,"great":5000,"good":2500,"safe":0},
   {"stage":"4","mode":"","quiztype":"形状判断力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"若いのは？","image":"images/trainers1.png","music":"","image2":"images/trainers2.png","image2time":"5000","options":[{"text":"A"},{"text":"B"},{"text":"C"},{"text":"D"}],"correct":"A","answerPict":"","rand":false,"answertime":10000,"answerstart":10000,"perfect":9500,"excellent":7500,"great":5000,"good":2500,"safe":0},
-  {"stage":"5","mode":"","quiztype":"記憶力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"マフラーは何色？","image":"images/009.png","music":"","image2":"","image2time":"","options":[{"text":"赤"},{"text":"黄"},{"text":"青"},{"text":"紫"}],"correct":"赤","answerPict":"","rand":false,"answertime":10000,"answerstart":10000,"perfect":9500,"excellent":7500,"great":5000,"good":2500,"safe":0},
-  {"stage":"5","mode":"","quiztype":"記憶力","beforeTxt":"音をよく聞いて！(まだ作ってない","beforeImg":"images/kiite.png","beforeMusic":"","beforeTime":"4000","question":"セブンって何回言った？","image":"","music":"","image2":"","image2time":"","options":[{"text":"5"},{"text":"6"},{"text":"7"},{"text":"8"}],"correct":"6","answerPict":"","rand":false,"answertime":10000,"answerstart":1,"perfect":-100,"excellent":-200,"great":-300,"good":-400,"safe":-500},
-  {"stage":"5","mode":"","quiztype":"空間認識力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"電車の進行方向は？","image":"images/ookubo.png","music":"","image2":"","image2time":"","options":[{"text":"手前"},{"text":"奥"},{"text":""},{"text":""}],"correct":"手前","answerPict":"","rand":false,"answertime":10000,"answerstart":10000,"perfect":9500,"excellent":7500,"great":5000,"good":2500,"safe":0},
-  {"stage":"5","mode":"kioku","quiztype":"記憶力","beforeTxt":"画像を覚えて！","beforeImg":"images/picos.png","beforeMusic":"","beforeTime":"4000","question":"野鳥の数は？","image":"","music":"","image2":"","image2time":"","options":[{"text":"0"},{"text":"3"},{"text":"5"},{"text":"7"}],"correct":"0","answerPict":"images/picocomment.png","rand":false,"answertime":10000,"answerstart":10000,"perfect":9500,"excellent":7500,"great":5000,"good":2500,"safe":0},
-  {"stage":"5","mode":"","quiztype":"注意力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"じゃんけんで負けて！","image":"images/tyoki.png","music":"","image2":"","image2time":"","options":[{"text":"images/goo.png"},{"text":"images/tyoki.png"},{"text":"images/paa.png"},{"text":""}],"correct":"images/paa.png","answerPict":"","rand":false,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
+  {"stage":"5","mode":"","quiztype":"記憶力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"マフラーは何色？","image":"images/009.png","music":"","image2":"","image2time":"","options":[{"text":"赤"},{"text":"黄"},{"text":"青"},{"text":"紫"}],"correct":"赤","answerPict":"","rand":false,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
+  {"stage":"5","mode":"","quiztype":"記憶力","beforeTxt":"まずは音を聞いて！","beforeImg":"images/kiite.png","beforeMusic":"seven","beforeTime":"9500","question":"セブンって何回言った？","image":"","music":"","image2":"","image2time":"","options":[{"text":"5"},{"text":"6"},{"text":"7"},{"text":"8"}],"correct":"6","answerPict":"","rand":false,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
+  {"stage":"5","mode":"","quiztype":"空間認識力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"電車の進行方向は？","image":"images/ookubo.png","music":"","image2":"","image2time":"","options":[{"text":"手前"},{"text":"奥"},{"text":""},{"text":""}],"correct":"手前","answerPict":"","rand":false,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
+  {"stage":"5","mode":"kioku","quiztype":"記憶力","beforeTxt":"画像を覚えて！","beforeImg":"images/picos.png","beforeMusic":"","beforeTime":"4000","question":"野鳥の数は？","image":"","music":"","image2":"","image2time":"","options":[{"text":"0"},{"text":"3"},{"text":"5"},{"text":"7"}],"correct":"0","answerPict":"images/picocomment.png","rand":false,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
+  {"stage":"5","mode":"","quiztype":"注意力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"じゃんけんで負けて！","image":"images/hiroshi.png","music":"","image2":"","image2time":"","options":[{"text":"images/ba-chan-tyoki.png"},{"text":"images/ba-chan-paa.png"},{"text":""},{"text":""}],"correct":"images/ba-chan-paa.png","answerPict":"","rand":true,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"5","mode":"renda","quiztype":"運動神経伝達力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"連打して！","image":"images/pico_up.png","music":"","image2":"images/pico_down.png","image2time":"","options":[{"text":"連打!"},{"text":""},{"text":""},{"text":""}],"correct":"","answerPict":"","rand":false,"answertime":5000,"answerstart":5000,"perfect":50,"excellent":40,"great":30,"good":20,"safe":10},
   {"stage":"5","mode":"mikiri","quiztype":"運動神経伝達力","beforeTxt":"もぐらが出たらたたけ！","beforeImg":"images/mogudot1.png","beforeMusic":"","beforeTime":"7000","question":"もぐらが出たらたたけ！","image":"images/mogudot2.png","music":"","image2":"","image2time":"","options":[{"text":"左上"},{"text":"右上"},{"text":"左下"},{"text":"右下"}],"correct":"右下","answerPict":"","rand":false,"answertime":4000,"answerstart":4000,"perfect":3500,"excellent":3000,"great":2000,"good":1000,"safe":0},
   {"stage":"5","mode":"","quiztype":"最終確認","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"あなたは<br>吉田道代<br>ですね？","image":"","music":"","image2":"","image2time":"","options":[{"text":"はい"},{"text":"はい"},{"text":"はい"},{"text":"はい"}],"correct":"はい","answerPict":"","rand":false,"answertime":10000,"answerstart":10000,"perfect":9500,"excellent":7500,"great":5000,"good":2500,"safe":0},
@@ -62,7 +62,7 @@ const stageData=[
   {"stage":"1", "loadMsg":"問題を作成しています…", "startMsg":"まずは肩慣らしです。"},
   {"stage":"2", "loadMsg":"あなたの回答を分析しています…", "startMsg":"少しレベルを上げます！"},
   {"stage":"3", "loadMsg":"さらに分析しています…", "startMsg":"やりますね！さらにレベルアップ！"},
-  {"stage":"4", "loadMsg":"あなたにあわせて調整しています…", "startMsg":"あなたに合った問題を作成しました！"},
+  {"stage":"4", "loadMsg":"あなたにあわせて調整しています…", "startMsg":"こんな問題はどうですか？"},
   {"stage":"5", "loadMsg":"完全にあなたを理解しました…", "startMsg":"あなたは・・・"},
 ]
 </script>
@@ -74,6 +74,8 @@ const stageData=[
 <audio id="se_lvup" src="bgm/lvup.mp3"></audio>
 <audio id="se_brazirian" src="bgm/brazirian.mp3"></audio>
 <audio id="se_re" src="bgm/re.mp3" loop></audio>
+<audio id="se_picovoice" src="bgm/picovoice.mp3" loop></audio>
+<audio id="se_seven" src="bgm/seven.mp3" loop></audio>
 
 <div id="first-confirm" >
   <br>
@@ -393,6 +395,10 @@ function showQuestion(){
       buttonsDiv.innerHTML="";
       buttonsDiv.className = 'buttons';
     }
+
+    if(q.beforeMusic != ''){
+      playSound(q.beforeMusic);
+    }
     
     setTimeout(()=>{
       if(q.mode=='kioku'){
@@ -448,7 +454,11 @@ function showQuestionMain(){
 
   if(q.mode=='renda'){
     setRenda();
-    playSound('brazirian', 0.4)
+    if(q.image=='images/pico_up.png'){
+      playSound('picovoice', 0.4)
+    }else{
+      playSound('brazirian', 0.4)
+    }
   }
   
   initButtonTouchEvents();
@@ -472,7 +482,7 @@ function showQuestionMain(){
 function setButtons(){
   buttonsDiv.innerHTML="";
 
-  if(q.rand){
+  if(q.rand==true){
     q.options.sort(() => Math.random() - 0.5);
   }
   
@@ -692,6 +702,7 @@ function handleAnswer(selected){
 function rendaResult(){
 
   se_brazirian.pause();
+  se_picovoice.pause();
 
   answered=true;
   stopTimer();
@@ -1068,6 +1079,8 @@ function init(){
   prePlaySound(se_lvup);
   prePlaySound(se_brazirian);
   prePlaySound(se_re);
+  prePlaySound(se_picovoice);
+  prePlaySound(se_seven);
 
   //ループが自然な位置に調整
   bgm.addEventListener("timeupdate", () => {
@@ -1078,7 +1091,13 @@ function init(){
 
   bgm_michiyo.addEventListener("timeupdate", () => {
     if (bgm_michiyo.currentTime >= 131.8) {
-      bgm_michiyo.currentTime = 1;
+      bgm_michiyo.currentTime = 0.8;
+    }
+  });
+
+  se_picovoice.addEventListener("timeupdate", () => {
+    if (se_picovoice.currentTime >= 4.0) {
+      se_picovoice.currentTime = 1.8;
     }
   });
 
@@ -1164,7 +1183,7 @@ function showCountdown(){
 function endQuiz(){
   stopTimer();
 
-  fadeOutAudio(bgm_michiyo,3500);
+  fadeOutAudio(bgm_michiyo,3.5);
   
   // 白フェード用のdivを生成
   const fade = document.createElement('div');
@@ -1196,6 +1215,8 @@ const se_count = document.getElementById('se_count');
 const se_lvup = document.getElementById('se_lvup');
 const se_brazirian = document.getElementById('se_brazirian');
 const se_re = document.getElementById('se_re');
+const se_picovoice = document.getElementById('se_picovoice');
+const se_seven = document.getElementById('se_seven');
 const soundCache = {};
 
 function preloadSounds(list){
@@ -1251,13 +1272,31 @@ function playSound(name, vol = 1.0){
     se_brazirian.volume = vol;
     se_brazirian.currentTime = 0;
     se_brazirian.play();
+  }else if(name == 'picovoice'){
+    se_picovoice.volume = vol;
+    se_picovoice.playbackRate = 1.2;
+    se_picovoice.currentTime = 1.8;
+    se_picovoice.play();
+  }else if(name == 'seven'){
+    bgm_michiyo.volume = 0.1;
+    se_seven.volume = vol;
+    se_seven.currentTime = 10;
+    se_seven.playbackRate = 1.3;
+    se_seven.play();
+    se_seven.addEventListener("timeupdate", () => {
+    if (se_seven.currentTime >= 19.5) {
+      se_seven.pause();
+      bgm_michiyo.volume = 1.0;
+    }
+  });
+  
   }else{
     const a = soundCache[name].cloneNode();
     a.volume = vol;   // 0.0〜1.0
     a.play();
   }
 }
-
+/*
 function fadeOutAudio(audio, duration = 500){
   const step = 50;
   const volDown = audio.volume / (duration / step);
@@ -1270,6 +1309,31 @@ function fadeOutAudio(audio, duration = 500){
     }
   }, step);
 }
+  */
+
+// 初期セットアップ（1回だけ）
+const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+function connectAudio(audio){
+  const source = audioCtx.createMediaElementSource(audio);
+  const gain = audioCtx.createGain();
+  source.connect(gain).connect(audioCtx.destination);
+  return gain;
+}
+
+// フェードアウト（呼び出すだけ）
+function fadeOutAudio(audio, duration = 0.5){
+  const gainNode = connectAudio(audio);
+  const now = audioCtx.currentTime;
+  gainNode.gain.cancelScheduledValues(now);
+  gainNode.gain.setValueAtTime(gainNode.gain.value, now);
+  gainNode.gain.linearRampToValueAtTime(0, now + duration);
+
+  setTimeout(() => {
+    audio.pause();
+    audio.currentTime = 0;
+  }, duration * 1000);
+}
+
 
 
 
