--- a/quiz.html
+++ b/quiz.html
@@ -1128,6 +1128,7 @@ function init(){
   }, 500);
   
   setTimeout(() => {
+    document.getElementById('first-confirm').style.display = 'none';
     showNextStage();
   }, 1500);
 
