--- a/quiz.html
+++ b/quiz.html
@@ -11,7 +11,7 @@
 <script>
 
 const testMode = true; //テスト時にローディングを高速化できる
-const FINAL_STAGE = 5;
+const FINAL_STAGE = 1; //5;
 
 // --- 問題データ ---
 const quizData=[
