--- a/quiz.html
+++ b/quiz.html
@@ -1045,19 +1045,18 @@ function showNextStage(){
 
           //カラフルBG
           changeBGColor(3);
-          setTimeout(() => {changeBGColor(2);}, 1000);
-          setTimeout(() => {changeBGColor(1);}, 2000);
-          setTimeout(() => {changeBGColor(2);}, 3000);
-          setTimeout(() => {changeBGColor(3);}, 4000);
-          setTimeout(() => {changeBGColor(4);}, 5000);
-          setTimeout(() => {changeBGColor(3);}, 6000);
-          setTimeout(() => {changeBGColor(2);}, 7000);
-          setTimeout(() => {changeBGColor(1);}, 8000);
-          setTimeout(() => {changeBGColor(2);}, 9000);
-          setTimeout(() => {changeBGColor(3);}, 10000);
-          setTimeout(() => {changeBGColor(4);}, 11000);
-          setTimeout(() => {changeBGColor(3);}, 12000);
-          setTimeout(() => {changeBGColor(2);}, 13000);
+          setTimeout(() => {changeBGColor(2);}, 1100);
+          setTimeout(() => {changeBGColor(1);}, 2200);
+          setTimeout(() => {changeBGColor(2);}, 3300);
+          setTimeout(() => {changeBGColor(3);}, 4400);
+          setTimeout(() => {changeBGColor(4);}, 5500);
+          setTimeout(() => {changeBGColor(3);}, 6600);
+          setTimeout(() => {changeBGColor(2);}, 7700);
+          setTimeout(() => {changeBGColor(1);}, 8800);
+          setTimeout(() => {changeBGColor(2);}, 9900);
+          setTimeout(() => {changeBGColor(3);}, 11000);
+          setTimeout(() => {changeBGColor(4);}, 12100);
+          setTimeout(() => {changeBGColor(3);}, 13200);
 
         }, 3000);
 
@@ -1474,11 +1473,13 @@ function playSound(name, vol = 1.0){
     se_seven.playbackRate = 1.3;
     se_seven.play();
     //fadeVolume(seven_gainNode, 2.0, 0.5);
+    var whileSeven = true;
     se_seven.addEventListener("timeupdate", () => {
-      if (se_seven.currentTime >= 19.5) {
+      if (se_seven.currentTime >= 19.5 && whileSeven) {
+        whileSeven = false;
         se_seven.pause();
         bgm_michiyo.volume = 1.0;
-        //fadeVolume(michiyo_gainNode, 1.0, 0.5);
+        fadeVolume(michiyo_gainNode, 1.0, 0.5);
       }
     });
   
